# Forge

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
benches/: parallel_benchmark.rs
docs/: architecture.md  configuration.md  examples.md  installation.md  usage.md
examples/: README.md  dependency-example.yaml  multi-stage-test.yaml  parallel-execution.yaml  test-forge-v2.yaml  test-forge-v3.yaml  test-forge.yaml
examples/dotnet/: Calculator.cs  README.md  forge.yaml
examples/go/: forge.yaml
examples/java/: README.md  forge.yaml
examples/java/src/: Calculator.java  CalculatorTest.java
examples/nodejs/: README.md  forge.yaml
examples/python/: README.md  app.py  forge.yaml  test_app.py
examples/rust/: rust-test.yaml
src/: container.rs  main.rs
tests/: dependency_tests.rs  integration_tests.rs
