[package]
name = "forge"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
bollard = "0.16.0"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.31"
colored = "2.1.0"
indicatif = "0.18.3"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.24.0"
criterion = "0.5"

[[bench]]
name = "parallel_benchmark"
harness = false
