[package]
name = "forge"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tokio = { version = "1.49.0", features = ["full"] }
bollard = "0.20.1"
uuid = { version = "1.21.0", features = ["v4"] }
futures-util = "0.3.32"
colored = "3.1.1"
indicatif = "0.18.4"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.25.0"
criterion = "0.8"

[[bench]]
name = "parallel_benchmark"
harness = false
